@@ -34,9 +34,7 @@ The easiest way to try POP Commerce is with the binary distribution available on
 
 If you don't have gradle or ant installed you can use this command line to run Java directly:
 
-    $ java -Xmx512M -XX:MaxPermSize=128m -jar moqui-${version}.war
-
-Note that with JDK 8 you don't need the -XX:MaxPermSize argument.
+    $ java -jar moqui-${version}.war
 
 ### Build and Run Locally
 
